# Collection

./: .gitignore  CMakeLists.txt  DSU.h  Fenwick2D.x.cpp  Fenwick2D_v2.h  FenwickRange.x.cpp  OrderStatisticMap.cpp  SegmentTree.x.cpp  hello.cpp  test.cpp  testall.sh
DataStrucutures/: CMakeLists.txt  DSU.h  DSU.t.cpp  Fenwick.x.cpp  Fenwick2D.h  FenwickRange_v2.h  SegmentTree.h
Graphs/: IndexedGraph.h  IndexedGraph.x.cpp  UnIndexedGraph.h  UnIndexedGraph.x.cpp
Maths/: BigInt.x.cpp  BigInteger.h  CMakeLists.txt  Common.h  fact_lcm.t.cpp  fact_lcm.x.cpp  fib.t.cpp  fib.x.cpp  gcd.t.cpp  gcd.x.cpp  inv.t.cpp  inv.x.cpp  phi.t.cpp  phi.x.cpp  pow.t.cpp  pow.x.cpp  prime.t.cpp  prime.x.cpp
crontasks/: testall.sh  update.sh
data_structures/: DSU.x.cpp  Fenwick.h  Fenwick2D.x.cpp  Fenwick2DRange.h  FenwickRange.h  OrderStatisticTree.cpp
resources/: .bash_aliases  codetemplates.xml  eclipse_preferences.epf
system_scripts/: update_desktop.sh
trading/: optimal_bet.cpp
